--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 .menu-list {
   list-style: none;
   display: flex;
+  cursor: pointer;
 }
 .menu-list-item {
   margin: 30px;
@@ -94,6 +95,7 @@ body {
   color: white;
   margin-bottom: 50px;
   font-size: 20px;
+  cursor: pointer;
 }
 
 .container {
